# vbf_parser

./: .bandit.yml  .coveragerc  .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  file.vbf  pyproject.toml  setup.py
vbf_parser/: __init__.py  header_extractor.py  simple_vbf_parser.py  vbf_jsonifier.py  vbf_parser.py
