[tool.black]
line-length = 120

[tool.isort]
line_length=120

[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "vbf_parser"
dist-name = "vbf-parser"
description-file = "README.md"
author = "Rafal Slaby"
author-email = "rafal.slaby222@gmail.com"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]
requires-python = ">=3.6"

# TODO: try poetry